# cp-phenotype-clustering

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: cchmc.yaml  paper_reproduction.yaml  pedsnet_validation.yaml  rehab_reference_live.yaml
scripts/: cp-phenotype  cpnet-validate  experimental_cluster_sensitivity.py  reduced_feature_validation.py
src/cp_phenotype/: __init__.py  artifacts.py  cli.py  cluster.py  compare.py  db.py  extract.py  interpret.py  matrix.py  phecodes.py  privacy.py  reference_pipeline.py  reproduce.py  utils.py
tests/: test_cluster_interpret_compare.py  test_configs.py  test_extract.py  test_matrix.py  test_phecodes.py  test_privacy.py  test_reference_pipeline.py
